# rust-string-manip-benchmark

./: Cargo.toml  README.md
src/: lib.rs  main.rs
tests/: tests.rs
