[package]
name = "string_manip_benchmark"
version = "0.2.0"
edition = "2021"
authors = ["Gunther Willems"]
license = "MIT"
description = """
Benchmarks with the Rust library string_manipulation.
"""
keywords = ["string", "str", "manipulation", "substr", "substring", "indexof", "utf8", "benchmark"]
categories = ["data-structures"]
readme = "README.md"
repository = "https://github.com/guntherwillems/rust-string-manip-benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
